Revision history for Perl extension Lingua::Conjunction.

2.7
	Added t/and.t
	Use gtar to create a distribution on Macs
	Use Test::DescribeMe to simplify tests

2.6	Sat Feb 24 10:06:42 EST 2024
	When joining a list of two, handle the separator phrase

2.5	Mon Aug  2 17:28:13 EDT 2021
	Return the previous value when setting a characteristic

2.4	Sun Jan 17 21:27:37 EST 2021
	Fix handling of last element in input array is undef

2.3	Sat Jan  9 20:05:59 EST 2021
	Fix RT#134010
	Fix RT#134011
	Included idea from List::ToHumanString to not incude space and undef in inputs

v2.2	Wed Jan  6 09:42:17 EST 2021
	New Maintainer, thanks to RRWO and DAMIAN for the software
	Moving from DistZilla to MakeMaker
	Try harder to use your language, rather than assuming 'en'

v2.1.4    2020-06-21 12:08:55+01:00 Europe/London
  [Documentation]
  - Fixed copyright year

  - Updated POD about languages supported.

v2.1.3    2020-06-21 11:59:57+01:00 Europe/London
  [Enhancements]
  - Add Indonesian (Ade Ishs)

  [Documentation]
  - Added INSTALL file to the distribution.

v2.1.2    2018-02-05 17:41:31+00:00 Europe/London
  [Documentation]
  - Fixed typo in POD, #1 (Mohammad S Anwar)

v2.1.1    2018-02-05 13:59:21+00:00 Europe/London
  [Tests]
  - Fixed failing test on Perl 5.8.

  [Documentation]
  - Removed Windows newlines from the Changes file.

v2.1.0    2018-01-28 21:38:27+00:00 Europe/London
  [Documentation]
  - Updated the format of the Changes file.
  - Updated the abstract and documentation.

  [Toolchain]
  - Reorganised files in the release to conform to modern standards.
  - Use Dist::Zilla and Pod::Weaver.
  - Use tuple version.

  [Other Changes]
  - Perltidied the source code.
  - Removed Windows line endings.

2.00 2003-11-16
  - Maintenance release; changed version to 2.00 after 4+ years.
  - Elaborated on more features in POD and added note about
    Perl Cookbook; fixed some typos
  - Minor code neating-up
  - Fixed penultimate rule in French (fr)